k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-app
spec:
  selector:
    app: storefront-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
