k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront-app
spec:
  ingressClassName: nginx
  rules:
    - host: storefront.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront-app
                port:
                  number: 80
